<resources>
    <string name="app_name">First App</string>
    <string name="calculator">Calculator</string>
    <string name="enter_a">Enter a</string>
    <string name="enter_b">Enter b</string>
    <string name="result">Result</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="you_should_specify_numbers">You should specify numbers</string>
    <string name="can_not_divide_by_0">Can not divide by 0</string>
    <string name="application_form">Application Form</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City : </string>
    <string name="hobbies">Hobbies : </string>
    <string name="playing">Playing</string>
    <string name="reading">Reading</string>
    <string name="swimming">Swimming</string>
    <string name="dancing">Dancing</string>
    <string name="submit">Submit</string>
    <string name="Full_name_should_not_be_empty">Full Name should not be empty</string>
    <string name="address_should_not_be_empty">Address should not be empty</string>
    <string name="select_gender"> Select Gender</string>
    <string name="select_hobbies">Select Hobbies</string>
    <string name="select_city">Select City</string>
    <array name="city_spinner">
        <item>@string/select_city</item>
        <item>Amravati</item>
        <item>Pune</item>
        <item>Akola</item>
        <item>Mumbai</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
